2008-06-01  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed compile error on debian etch.
	The libc6 shipped with debian etch doesn't define ULLONG_MAX properly
	even if _GNU_SOURCE is defined. So define ULLONG_MAX in case when
	it is undefined.
	* src/Util.cc (ULLONG_MAX)

2008-05-31  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added epoll support. Use epoll if it is available. If not, use select.
	When async dns is enabled in compile time, epoll support is enabled
	only when aria2 is built with c-ares. This condition statement is
	defined in a2io.h.
	Currently aria2 supports both c-ares and ares, but ares is maintained
	for quite a while and debian already has c-ares package, ares support
	will be dropped in the future version.
	* configure.ac
	* src/AbstractCommand.cc
	* src/AsyncNameResolver.cc
	* src/AsyncNameResolver.h
	* src/Command.cc
	* src/Command.h
	* src/DownloadEngine.cc
	* src/DownloadEngine.h
	* src/PeerAbstractCommand.cc
	* src/SocketCore.cc
	* src/SocketCore.h
	* src/a2io.h

2008-05-31  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	* test/MetalinkEntryTest.cc: Added missing `defined' keyword to #if
	directive.
	
2008-05-31  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Do not do write operation to /dev/null file.
	* src/LogFactory.cc
	* src/SimpleLogger.cc

	Replaced vasprintf with vsnprintf
	* src/SimpleLogger.cc (SimpleLogger::writeLog)

2008-05-31  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	* src/BtRequestMessage.cc
	(BtRequestMessage::onQueue): Given piece to RequestSlot. This is a fix
	for segmentation fault caused by previous commit.

2008-05-31  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Reduced the usage of gettimeofday().
	* src/DefaultBtMessageDispatcher.cc
	(DefaultBtMessageDispatcher::checkRequestSlotAndDoNecessaryThing)
	(class FindStaleRequestSlot, class ProcessStaleRequestSlot)
	* src/RequestSlot.cc
	* src/RequestSlot.h
	(RequestSlot::isTimeout)
	